--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 GrayZones_Book/articles-final-without-castro/mr-01_Introduction_THE_GRAY_ZONES_OF_CREATIVITY_AND_CAPITAL.docx
+
+webdesign/Post-MoneyLab_0105/lambdaCSS.css
+
+webdesign/Post-MoneyLab_0105/lambdaCSS.css
